Move table information summary to top

--- a/fun/projecteuler_tracker.html
+++ b/fun/projecteuler_tracker.html
@@ -122,6 +122,7 @@
             filterTypeToOrder[
               $("input[type=radio][name=filterType]:checked").val()
             ],
+          dom: "ift",
         });
 
         $("input[type=radio][name=filterType]").change(function () {
