Move table information summary to top

--- a/fun/kickstart_tracker.html
+++ b/fun/kickstart_tracker.html
@@ -119,6 +119,7 @@
             filterTypeToOrder[
               $("input[type=radio][name=filterType]:checked").val()
             ],
+          dom: "ift",
         });
 
         $("input[type=radio][name=filterType]").change(function () {
