Move table information summary to top

--- a/fun/codejamio_tracker.html
+++ b/fun/codejamio_tracker.html
@@ -112,6 +112,7 @@
             filterTypeToOrder[
               $("input[type=radio][name=filterType]:checked").val()
             ],
+          dom: "ift",
         });
 
         $("input[type=radio][name=filterType]").change(function () {
