Move table information summary to top

--- a/fun/topcoder_next_problems.html
+++ b/fun/topcoder_next_problems.html
@@ -120,6 +120,7 @@
           $("#solvedProblems").DataTable({
             columnDefs: [{ orderable: false, targets: 3 }],
             order: [[6, "desc"]],
+            dom: "ifplt",
           });
         }
 
