Add solved tags counter to Codeforces tracker

--- a/fun/topcoder_tracker.html
+++ b/fun/topcoder_tracker.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TopCoder Next Problems</title>
+    <title>TopCoder Tracker</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
