--- a/fun/codeforces_tracker.html
+++ b/fun/codeforces_tracker.html
@@ -2,22 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Codeforces Next Problems</title>
+    <title>Codeforces Tracker</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"
+      href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"
     />
 
     <script type="text/javascript">
@@ -32,28 +32,26 @@
 
         function prepareMainProblems(problems, problemStatistics, submissions) {
           const idToProblem = {};
-          for (let i = 0; i < problems.length; i++) {
-            idToProblem[buildProblemId(problems[i])] = problems[i];
-            problems[i].problemset = "MAIN";
-            problems[i].solved = false;
+          for (const problem of problems) {
+            idToProblem[buildProblemId(problem)] = problem;
+            problem.problemset = "MAIN";
+            problem.solved = false;
           }
-          for (let i = 0; i < problemStatistics.length; i++) {
-            idToProblem[buildProblemId(problemStatistics[i])].solvedCount =
-              problemStatistics[i].solvedCount;
+          for (const problemStatistic of problemStatistics) {
+            idToProblem[buildProblemId(problemStatistic)].solvedCount =
+              problemStatistic.solvedCount;
           }
 
-          for (let i = 0; i < submissions.length; i++) {
+          for (const submission of submissions) {
             if (
-              !submissions[i].problem.hasOwnProperty("problemsetName") &&
-              submissions[i].verdict === "OK"
+              !submission.problem.hasOwnProperty("problemsetName") &&
+              submission.verdict === "OK"
             ) {
-              let problem = submissions[i].problem;
-
-              const problemId = buildProblemId(problem);
+              const problemId = buildProblemId(submission.problem);
               if (idToProblem.hasOwnProperty(problemId)) {
                 idToProblem[problemId].solved = true;
                 idToProblem[problemId].solvedTime =
-                  submissions[i].creationTimeSeconds;
+                  submission.creationTimeSeconds;
               }
             }
           }
@@ -94,25 +92,25 @@
           submissions
         ) {
           const idToProblem = {};
-          for (let i = 0; i < problems.length; i++) {
-            idToProblem[buildProblemId(problems[i])] = problems[i];
-            problems[i].problemset = "ACMSGURU";
-            problems[i].solved = false;
+          for (const problem of problems) {
+            idToProblem[buildProblemId(problem)] = problem;
+            problem.problemset = "ACMSGURU";
+            problem.solved = false;
           }
-          for (let i = 0; i < problemStatistics.length; i++) {
-            idToProblem[buildProblemId(problemStatistics[i])].solvedCount =
-              problemStatistics[i].solvedCount;
+          for (const problemStatistic of problemStatistics) {
+            idToProblem[buildProblemId(problemStatistic)].solvedCount =
+              problemStatistic.solvedCount;
           }
 
-          for (let i = 0; i < submissions.length; i++) {
+          for (const submission of submissions) {
             if (
-              submissions[i].problem.problemsetName === "acmsguru" &&
-              submissions[i].verdict === "OK"
+              submission.problem.problemsetName === "acmsguru" &&
+              submission.verdict === "OK"
             ) {
-              const problemId = buildProblemId(submissions[i].problem);
+              const problemId = buildProblemId(submission.problem);
               idToProblem[problemId].solved = true;
               idToProblem[problemId].solvedTime =
-                submissions[i].creationTimeSeconds;
+                submission.creationTimeSeconds;
             }
           }
         }
@@ -163,6 +161,30 @@
             .concat(acmsguruProblems)
             .filter((problem) => problem.solved);
 
+          const tagToCount = new Map();
+          for (const problem of solvedProblems) {
+            for (const tag of problem.tags) {
+              tagToCount.set(
+                tag,
+                (tagToCount.has(tag) ? tagToCount.get(tag) : 0) + 1
+              );
+            }
+          }
+          tagToCount.forEach((count, tag) => {
+            $("#solvedTags tbody").append(`
+              <tr>
+                <th scope="row">${tag}</th>
+                <td>${count}</td>
+              </tr>
+              `);
+          });
+
+          $("#solvedTags").DataTable({
+            paging: false,
+            order: [[1, "desc"]],
+            dom: "ift",
+          });
+
           solvedProblems.forEach((problem) => {
             let url;
             if (problem.problemset === "MAIN") {
@@ -187,6 +209,7 @@
           $("#solvedProblems").DataTable({
             columnDefs: [{ orderable: false, targets: 3 }],
             order: [[6, "desc"]],
+            dom: "ifplt",
           });
         }
 
@@ -293,7 +316,26 @@
     <div class="row m-1 mt-5">
       <div class="col-sm">
         <div class="card">
-          <div class="card-header">All Solved Problems</div>
+          <div class="card-header">Solved Tags</div>
+          <div class="card-body">
+            <table id="solvedTags" class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Tag</th>
+                  <th scope="col">Count</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row m-1 mt-5">
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-header">Solved Problems</div>
           <div class="card-body">
             <table id="solvedProblems" class="table table-striped">
               <thead>
