--- a/fun/codeforces_tracker.html
+++ b/fun/codeforces_tracker.html
@@ -5,19 +5,16 @@
     <title>Codeforces Tracker</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
 
     <link
       rel="stylesheet"
-      type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"
+      href="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.css"
     />
 
     <script type="text/javascript">
