Move table information summary to top

--- a/fun/codejam_tracker.html
+++ b/fun/codejam_tracker.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <title>Google Code Jam Tracker</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.js"></script>
 
     <link
       rel="stylesheet"
@@ -14,7 +13,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+      href="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.css"
     />
 
     <script>
@@ -121,6 +120,7 @@
             filterTypeToOrder[
               $("input[type=radio][name=filterType]:checked").val()
             ],
+          dom: "ift",
         });
 
         $("input[type=radio][name=filterType]").change(function () {
