--- a/fun/topcoder_tracker.html
+++ b/fun/topcoder_tracker.html
@@ -187,7 +187,7 @@
           })
           .then((data) => {
             return $.ajax({
-              url: `https://wangkai-cors-anywhere.herokuapp.com/${TOPCODER_BASE_URL}/tc?module=ProblemArchive&er=1000000`,
+              url: `https://cors-anywhere.herokuapp.com/${TOPCODER_BASE_URL}/tc?module=ProblemArchive&er=1000000`,
             });
           })
           .then((data) => {
