--- a/fun/topcoder_tracker.html
+++ b/fun/topcoder_tracker.html
@@ -31,6 +31,7 @@
           Yahtzee: "YahtzeeScore",
           DivDigits: "DivisorDigits",
           MarginCalculator: "ProfitCalculator",
+          Cards: "CardCount",
         };
 
         const problemNameToSubmission = {};
