Rename solution file from Solution.java to Main.java for codejamio tracker

--- a/fun/codejamio_tracker.html
+++ b/fun/codejamio_tracker.html
@@ -69,7 +69,7 @@
           const path = `${problem.round.name}/${problem.problem.name.replace(
             /\//g,
             ":"
-          )}/Solution.java`;
+          )}/Main.java`;
 
           if (githubPaths.has(path)) {
             problem.submissionUrl = `https://github.com/charles-wangkai/codejamio/blob/main/${encodeURIComponent(
