Add url for problem Cody's Jams

--- a/fun/codejamio_tracker.html
+++ b/fun/codejamio_tracker.html
@@ -33,6 +33,7 @@
         let dataset = await $.get({
           url: "codejamio_dataset.json",
           dataType: "json",
+          cache: false,
         });
 
         let problems = [];
