--- a/fun/kickstart_tracker.html
+++ b/fun/kickstart_tracker.html
@@ -92,8 +92,8 @@
           $("#problems tbody").append(`
               <tr>
                 <th scope="row"><a href="${problem.problem.url}">${problem.problem.name}</a></th>
-                <td><a href="${problem.year.url}">${problem.year.name}</a></td>
-                <td><a href="${problem.round.url}">${problem.round.name}</a></td>
+                <td>${problem.year.name}</td>
+                <td>${problem.round.name}</td>
                 <td><a href="${problem.problem.url}">${problem.index}</a></td>
                 <td>${submission}</td>
               </tr>
